--- a/microservice-discovery-eureka/src/main/resources/application.yml
+++ b/microservice-discovery-eureka/src/main/resources/application.yml
@@ -1,9 +1,15 @@
+#spring:
+#  security:
+#    user:
+#      name: user
+#      password: password
 server:
   port: 8761
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+#      defaultZone: http://user:password@localhost:8761/eureka
     register-with-eureka: false
     fetch-registry: false
 #  instance:
