--- a/microservice-provider-user/src/main/resources/application.yml
+++ b/microservice-provider-user/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     platform: h2
     schema: classpath:schema.sql
     data: classpath:data.sql
+  application:
+    name: microservice-provider-user
 logging:
   level:
     root: info
@@ -20,4 +22,7 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+#      defaultZone: http://user:password@localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
